--- a/TestMVCProject/Sabbir.TestMVCProject.Web.csproj
+++ b/TestMVCProject/Sabbir.TestMVCProject.Web.csproj
@@ -14,4 +14,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.2" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <ProjectReference Include="..\Sabbir.TestMVCProject.Test\Sabbir.TestMVCProject.Test.csproj" />
+  </ItemGroup>
+
 </Project>
