--- a/CSharpAtoZ/CSharpAtoZ.csproj
+++ b/CSharpAtoZ/CSharpAtoZ.csproj
@@ -10,6 +10,7 @@
     <Compile Remove="DataTypes.cs" />
     <Compile Remove="FunWithNumbers.cs" />
     <Compile Remove="MethodInCSharp.cs" />
+    <Compile Remove="ReturnStatment.cs" />
     <Compile Remove="StringManipulations.cs" />
     <Compile Remove="UserInput.cs" />
     <Compile Remove="Variables.cs" />
