--- a/CSharpAtoZ/CSharpAtoZ.csproj
+++ b/CSharpAtoZ/CSharpAtoZ.csproj
@@ -13,6 +13,7 @@
     <Compile Remove="MethodInCSharp.cs" />
     <Compile Remove="ReturnStatment.cs" />
     <Compile Remove="StringManipulations.cs" />
+    <Compile Remove="SwitchStatement.cs" />
     <Compile Remove="UserInput.cs" />
     <Compile Remove="Variables.cs" />
   </ItemGroup>
