--- a/CSharpAtoZ/CSharpAtoZ.csproj
+++ b/CSharpAtoZ/CSharpAtoZ.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <Compile Remove="ArrayInCSharp.cs" />
     <Compile Remove="CalculatorWithIfElse.cs" />
+    <Compile Remove="ClassAndObject.cs" />
     <Compile Remove="DataTypes.cs" />
     <Compile Remove="ExceptionHandling.cs" />
     <Compile Remove="ForLoop.cs" />
