--- a/CSharpAtoZ/CSharpAtoZ.csproj
+++ b/CSharpAtoZ/CSharpAtoZ.csproj
@@ -14,6 +14,7 @@
     <Compile Remove="ExceptionHandling.cs" />
     <Compile Remove="ForLoop.cs" />
     <Compile Remove="FunWithNumbers.cs" />
+    <Compile Remove="Inheritance.cs" />
     <Compile Remove="MethodInCSharp.cs" />
     <Compile Remove="ReturnStatment.cs" />
     <Compile Remove="SetterAndGetter.cs" />
