--- a/CSharpAtoZ/CSharpAtoZ.csproj
+++ b/CSharpAtoZ/CSharpAtoZ.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <Compile Remove="ArrayInCSharp.cs" />
+    <Compile Remove="ArrayListFunctions.cs" />
     <Compile Remove="ArrayListPractice.cs" />
     <Compile Remove="CalculatorWithIfElse.cs" />
     <Compile Remove="ClassAndObject.cs" />
