Queue in C# basic

--- a/CSharpAtoZ/CSharpAtoZ.csproj
+++ b/CSharpAtoZ/CSharpAtoZ.csproj
@@ -13,6 +13,7 @@
     <Compile Remove="ClassAndObject.cs" />
     <Compile Remove="ConstructorInCs.cs" />
     <Compile Remove="DataTypes.cs" />
+    <Compile Remove="DictionaryInCSharp.cs" />
     <Compile Remove="ExceptionHandling.cs" />
     <Compile Remove="ForLoop.cs" />
     <Compile Remove="FunWithNumbers.cs" />
