1st successful build.

--- a/CSharpAll/CSharpAll.csproj
+++ b/CSharpAll/CSharpAll.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="MyArrayPractice.cs" />
     <Compile Remove="Program.cs" />
   </ItemGroup>
 
