Angular 10 Project for ASP.NET Core API

--- a/API/Angular10 Project for CoreApi01/UI/Angular10/angular.json
+++ b/API/Angular10 Project for CoreApi01/UI/Angular10/angular.json
@@ -124,5 +124,8 @@
       }
     }
   },
-  "defaultProject": "Angular10"
+  "defaultProject": "Angular10",
+  "cli": {
+    "analytics": "95127f76-d8c5-40c7-a667-4c37d019a0b8"
+  }
 }
